特定行数ごとに出力するテーブルを分割する設定を追加